# master-connect

./: .gitignore  API_GATEWAY_CLARIFICATION.md  AUDIT_REPORT_2025-01-06.md  AUDIT_SUMMARY.md  AVATAR_AUDIT_REPORT.md  AVATAR_COMPLETE_FIX.md  AVATAR_FINAL_STATUS.md  AVATAR_FIX_REPORT.md  AVATAR_URL_FIX.md  BOOKING_SYSTEM_AUDIT_REPORT.md  BOOKING_SYSTEM_FULL_AUDIT_REPORT.md  CHECKLIST.md  CHECK_API_SSL_STATUS.md  CHECK_HEALTH_PATH.md  CHECK_OTHER_SITES.md  CUSTOMER_JOURNEY_MAP.md  DATABASE_FIXED.md  DEPLOY.md  DEPLOY_STEPS.md  FINAL_AUDIT_REPORT.md  FIX_API_SSL.md  FIX_ENV_VARS.md  GIT_SETUP.md  GOOGLE_MEET_DEBUG.md  GOOGLE_MEET_FINAL_CHECKLIST.md  GOOGLE_MEET_FIX_SUMMARY.md  GOOGLE_MEET_QUICK_FIX.md  GOOGLE_MEET_QUICK_SETUP.md  GOOGLE_MEET_SETUP.md  GOOGLE_MEET_STATUS.md  HOW_NGINX_PROXY_SSL_WORKS.md  IMPLEMENTATION_COMPLETE.md  PAYMENT_SYSTEM.md  PRODUCTION_CHECKLIST.md  PROJECT_STATUS.md  QUICK_START.md  README.md  SERVER_DEPLOY.md  SSL_API_FIX.md  SSL_SETUP_COMPLETE.md  (+40 more)
.cursor/plans/: -------------------96c5c32b.plan.md
apps/api/: AUTH_SETUP_COMPLETE.md  Dockerfile  alembic.ini  apply_mentor_settings_migration.py  create_demo_users.py  create_dev_seed.py  debug_users.py  diagnose_google_meet.py  fix_mentor_settings_timestamps.py  recalculate_mentor_ratings.py  run_server.py  start_backend.ps1  start_minimal.py  test_availability.py  test_google_meet.py  test_login_direct.py  test_meet_link.py  test_serialization_fix.py  test_startup.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20251206_01_add_notification_types.py  20251206_1735-970e64f393f9_merge_heads.py  20251206_1800-ef7d2cbe0dd0_add_more_notification_types.py  20251207_fix_notification_enum_casing.py  2025_10_09_1937-53a19d0b709e_initial_database_schema.py  2025_10_22_1805-fix_mentors_schema.py  2025_11_24_1852-e073868af5c9_add_avatar_url_to_students.py  2025_11_25_1655-increase_refresh_token_length.py  2025_11_25_1700-add_mentor_settings_table.py  2025_11_25_1701-add_notifications_table.py  2026_01_07_0052-17e3338d0c96_add_booking_created_notification_type.py  2026_01_07_0159-a021f5e644f5_add_updated_at_to_notifications.py  2026_01_08_0001-b3f4a8c9d1e2_update_default_timezone.py  2026_01_25_adding_booking_requests.py  fix_mentors_schema.py
apps/api/src/: __init__.py  db_structure.txt  main.py
apps/api/src/core/: __init__.py  config.py  dependencies.py  exceptions.py  logging.py  middleware.py  rbac.py  security.py
apps/api/src/db/: __init__.py  base.py  models.py  session.py
apps/api/src/integrations/: __init__.py  google_calendar.py
apps/api/src/jobs/: __init__.py  worker.py
apps/api/src/modules/: __init__.py
apps/api/src/modules/notifications/: __init__.py
apps/api/src/modules/support/: __init__.py
apps/api/tests/: conftest.py
apps/web/: .eslintrc.cjs  Dockerfile  env.example  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  test_api.html  tsconfig.json  vite.config.ts
apps/web/src/: main.tsx  vite-env.d.ts
apps/web/src/app/: App.tsx
apps/web/src/app/router/: AppRouter.tsx  ProtectedRoute.tsx
apps/web/src/app/styles/: globals.css
apps/web/src/pages/about/: AboutPage.tsx
apps/web/src/pages/admin/: AdminAnalyticsPage.tsx  AdminBookingsPage.tsx  AdminDashboardPage.tsx  AdminMentorsPage.tsx  AdminUsersPage.tsx
apps/web/src/pages/auth/: ForgotPasswordPage.tsx  LoginPage.tsx  RegisterPage.tsx  ResetPasswordPage.tsx
apps/web/src/pages/bookings/: BookingDetailPage.tsx
apps/web/src/pages/chat/: ChatPage.tsx
apps/web/src/pages/errors/: NotFoundPage.tsx
apps/web/src/pages/home/: HomePage.tsx
nginx/: connect_simple.conf  masterconnect.conf  masterconnect_api_gateway.conf
(+116 files in other folders)
